# ossue

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  install.sh  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: db.rs  enums.rs  error.rs  lib.rs  logging.rs  queries.rs  sync.rs  test_helpers.rs
crates/core/src/migration/: m001_create_settings.rs  m002_create_connectors.rs  m003_create_projects.rs  m004_create_items.rs  m005_create_chat_messages.rs  m006_create_project_notes.rs  m007_create_analysis_history.rs  m008_create_project_settings.rs  mod.rs
crates/core/src/models/: analysis_history.rs  chat_message.rs  connector.rs  item.rs  mod.rs  project.rs  project_note.rs  project_settings.rs
crates/core/src/services/: ai_api.rs  ai_cli.rs  auth.rs  context.rs  git.rs  github.rs  gitlab.rs  http.rs  issue_creator.rs  mod.rs  oauth.rs  provider.rs  repo_manager.rs  sync_orchestrator.rs
scripts/: bump-version.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DatabaseError.tsx  ErrorBoundary.tsx  UpdateBanner.tsx
src/hooks/: useAIStreaming.ts  useAnalysisSteps.ts  useAttention.ts  useChat.ts  useItems.ts  useProjects.ts  useTheme.ts  useUpdateChecker.ts
src/lib/: SyncManager.ts  labels.ts  linkedItems.ts  tauri.ts  utils.ts
src/stores/: analysisStore.ts  appStore.ts  chatStore.ts  draftIssueStore.ts  itemStore.ts  navigationStore.ts  projectStore.ts  uiStore.ts
src/types/: ai.ts  connector.ts  (+8 more)
(+55 files in other folders)
